--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
 </head>
 
 <body>
-    <header class="content" >
+    <header class="barra" >
         <div class="logo">
             <img src="Imagens/logo150.png" alt="">
             <h3>BurguerTop</h3>
         </div>
         <nav>
             <ul class="list-menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#sobrenos">Sobre Nós</a></li>
-                <li><a href="#cardapio">Cardápio</a></li>
-                <li><a href="#contatos">Contatos</a></li>
-                <!-- <li><a href="#"><i class="bi bi-cart3"></i></a></li> -->
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sobre.html">Quem somos</a></li>
+                <li><a href="cardapio.html">Cardápio</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
 
@@ -36,136 +35,14 @@
 
     <section class="first-section" id="home">
         <div class="conteudo-principal">
-            <h1>Bem-vindo à BurguerTop</h1>
+            <h1>Bem-vindo ao BurguerTop</h1>
             <h2>Confira nossas deliciosas opções no cardápio!</h2>
-            <div class="btn">
-                <!-- <button class="reservar">Reserve a sua!</button> -->
-                <!-- <button class="montar">Montar seu hamburguer!</button> -->
-            </div>
-        </div>
-    </section>
-
-    <section class="sobre-nos" id="sobrenos">
-        <div class="main">
-            <div class="contentsobre">
-                <h2>Sobre nós</h2>
-                <p>
-                    Na <strong>BurguerTop</strong>, nossa missão é oferecer uma experiência gastronômica única, com hambúrgueres artesanais que unem sabor, qualidade e criatividade. Desde a nossa fundação, acreditamos que um hambúrguer pode ser muito mais do que uma refeição rápida: ele pode ser uma verdadeira obra-prima culinária.
-                  </p>
-                  <p>
-                    Trabalhamos com os melhores ingredientes, sempre frescos e cuidadosamente selecionados, para garantir que cada mordida seja uma explosão de sabor. Nossas receitas exclusivas são preparadas com dedicação, misturando técnicas tradicionais com um toque de inovação. Além disso, temos opções para todos os gostos, incluindo versões vegetarianas e veganas, para que ninguém fique de fora dessa experiência deliciosa.
-                  </p>
-                  <p>
-                    Nossa equipe é apaixonada pelo que faz, e isso se reflete em cada detalhe, desde o preparo dos alimentos até o atendimento ao cliente. Queremos que você se sinta em casa ao visitar qualquer uma de nossas unidades ou fazer um pedido online. Afinal, a <strong>BurguerTop</strong> não é apenas sobre hambúrgueres, é sobre criar memórias ao redor da comida.
-                  </p>
-                  <p>
-                    Venha nos visitar e descubra por que somos referência no mundo dos hambúrgueres artesanais. Temos certeza de que, depois de provar nossos sabores, você também será fã da <strong>BurguerTop</strong>!
-                  </p>
-            </div>
-            <div class="img-cozinha">
-                <img src="./Imagens/cozinha.jpg" alt="">
-            </div>
-        </div>
-    </section>
-
-    <section class="cardapio" id="cardapio">
-        <h2>Cardápio</h2>
-        <div class="itens-cardapio">
-            <div class="Smash">
-                <img src="./Imagens/hamb-1.png" alt="">
-                <div class="info">
-                    <h3>Smash</h3>
-                    <p>Pão levinho de fermentação natural da Trigou, burger 160g, queijo prato e maionese da casa. <br><br><span>R$35,00</span></p>
-                    <!-- <span>R$35,90</span> -->
-                    <!-- <h4>1 hamburguer <span>R$35,00</span></h4> -->
-                    <!-- <h4>2 hamburguer <span>R$45,00</span></h4>
-                    <h4>3 hamburguer <span>R$55,00</span></h4> -->
-                    <!-- <button class="pedir">Pedir agora</button> -->
-                </div>
-            </div>
-            <div class="Breaking Burguer">
-                <img src="./Imagens/hamb-2.png" alt="">
-                <div class="info">
-                    <h3>Breaking Burguer</h3>
-                    <p>Pão levinho de fermentação natural da Trigou, burger 160g, queijo prato e maionese da casa. <br><br><span>R$35,00</span></p>                    
-                    <!-- <h4>1 hamburguer <span>R$35,00</span></h4>
-                    <h4>2 hamburguer <span>R$45,00</span></h4>
-                    <h4>3 hamburguer <span>R$55,00</span></h4>
-                    <button class="pedir">Pedir agora</button> -->
-                </div>
-            </div>
-            <div class="Salad">
-                <img src="./Imagens/hamb-3.png" alt="">
-                <div class="info">
-                    <h3>Salad</h3>
-                    <p>Pão levinho de fermentação natural da Trigou, burger 160g, queijo prato e maionese da casa. <br><br><span>R$35,00</span></p>                    
-                    <!-- <h4>1 hamburguer <span>R$35,00</span></h4>
-                    <h4>2 hamburguer <span>R$45,00</span></h4>
-                    <h4>3 hamburguer <span>R$55,00</span></h4>
-                    <button class="pedir">Pedir agora</button> -->
-                </div>
-            </div>
-            <div class="Da casa">
-                <img src="./Imagens/hamb-4.png" alt="">
-                <div class="info">
-                    <h3>Da Casa</h3>
-                    <p>Pão levinho de fermentação natural da Trigou, burger 160g, queijo prato e maionese da casa. <br><br><span>R$35,00</span></p>
-                    <!-- <h4>1 hamburguer <span>R$35,00</span></h4>
-                    <h4>2 hamburguer <span>R$45,00</span></h4>
-                    <h4>3 hamburguer <span>R$55,00</span></h4>
-                    <button class="pedir">Pedir agora</button> -->
-                </div>
-            </div>
-            <div class="Darth Burguer">
-                <img src="./Imagens/hamb-5.png" alt="">
-                <div class="info">
-                    <h3>Darth Burguer</h3>
-                    <p>Pão levinho de fermentação natural da Trigou, burger 160g, queijo prato e maionese da casa. <br><br><span>R$35,00</span></p>
-                    <!-- <h4>1 hamburguer <span>R$35,00</span></h4>
-                    <h4>2 hamburguer <span>R$45,00</span></h4>
-                    <h4>3 hamburguer <span>R$55,00</span></h4>
-                    <button class="pedir">Pedir agora</button> -->
-                </div>
-            </div>
-            <div class="Pulp Burguer">
-                <img src="./Imagens/hamb-6.png" alt="">
-                <div class="info">
-                    <h3>Pulp Burguer</h3>
-                    <p>Pão levinho de fermentação natural da Trigou, burger 160g, queijo prato e maionese da casa. <br><br><span>R$35,00</span></p>
-                    <!-- <h4>1 hamburguer <span>R$35,00</span></h4>
-                    <h4>2 hamburguer <span>R$45,00</span></h4>
-                    <h4>3 hamburguer <span>R$55,00</span></h4>
-                    <button class="pedir">Pedir agora</button> -->
-                </div>
-            </div>
-            <div class="Rock 'N' Burguer">
-                <img src="./Imagens/hamb-7.png" alt="">
-                <div class="info">
-                    <h3>Rock 'N' Burguer</h3>
-                    <p>Pão levinho de fermentação natural da Trigou, burger 160g, queijo prato e maionese da casa. <br><br><span>R$35,00</span></p>
-                    <!-- <h4>1 hamburguer <span>R$35,00</span></h4>
-                    <h4>2 hamburguer <span>R$45,00</span></h4>
-                    <h4>3 hamburguer <span>R$55,00</span></h4>
-                    <button class="pedir">Pedir agora</button> -->
-                </div>
-            </div>
-            <div class="Super Burguer">
-                <img src="./Imagens/hamb-8.png " alt="">
-                <div class="info">
-                    <h3>Super Burguer</h3>
-                    <p>Pão levinho de fermentação natural da Trigou, burger 160g, queijo prato e maionese da casa. <br><br><span>R$35,00</span></p>
-                    <!-- <h4>1 hamburguer <span>R$35,00</span></h4>
-                    <h4>2 hamburguer <span>R$45,00</span></h4>
-                    <h4>3 hamburguer <span>R$55,00</span></h4>
-                    <button class="pedir">Pedir agora</button> -->
-                </div>
-            </div>
             
         </div>
     </section>
 
-    <section class="contatos" id="contatos">
-        <h3>Contatos</h3>
+    <!--<section class="contatos" id="contatos">
+        <h3>Contato</h3>
         <div class="contatos-secao">
             <div>
                 <i class="bi bi-telephone"></i>
@@ -180,11 +57,12 @@
                 <span>BurguerTop</span>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <footer>
-        <h4>Desenvolvido por -> Richard e James Johnson</h4>
+        <p>&copy; 2024 BurguerTop Hamburgueria. Todos os direitos reservados.</p>
+            
     </footer>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
