--- a/index.html
+++ b/index.html
@@ -65,4 +65,6 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic optio deserunt, natus voluptatum sint, incidunt esse neque minus porro recusandae minima harum quo, odit aperiam ab temporibus totam dignissimos eos?</p>
 </html>
